@@ -25829,6 +25829,15 @@ select='if(gt(random(0), 0.2), 1, 2)':n=2 [tmp], boxblur=2:2, [tmp] interleave
 @end example
 @end itemize
 
+@section latency, alatency
+Measure filtering latency.
+
+Report previous filter filtering latency, delay in number of audio samples for audio filters
+or number of video frames for video filters.
+
+On end of input stream, filter will report min and max measured latency for previous running filter
+in filtergraph.
+
 @section metadata, ametadata
 
 Manipulate frame metadata.
