@@ -52,6 +52,7 @@ extern const AVFilter ff_af_agate;
 extern const AVFilter ff_af_aiir;
 extern const AVFilter ff_af_aintegral;
 extern const AVFilter ff_af_ainterleave;
+extern const AVFilter ff_af_alatency;
 extern const AVFilter ff_af_alimiter;
 extern const AVFilter ff_af_allpass;
 extern const AVFilter ff_af_aloop;
@@ -302,6 +303,7 @@ extern const AVFilter ff_vf_interleave;
 extern const AVFilter ff_vf_kerndeint;
 extern const AVFilter ff_vf_kirsch;
 extern const AVFilter ff_vf_lagfun;
+extern const AVFilter ff_vf_latency;
 extern const AVFilter ff_vf_lenscorrection;
 extern const AVFilter ff_vf_lensfun;
 extern const AVFilter ff_vf_libvmaf;
