@@ -22,6 +22,7 @@ version <next>:
 - apsyclip audio filter
 - morpho video filter
 - amr parser
+- (a)latency filters
 
 
 version 4.4:
